# scitool

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  GEMINI.md  LICENSE-MIT  README.md  clippy.toml  scidub.manifest.json  scidub.toml  test  test2  test_100.ase
crates/atomic-dir/: Cargo.toml
crates/atomic-dir/src/: commit.rs  dir_lock.rs  dir_state.rs  err_helpers.rs  lib.rs  paths.rs  recovery.rs  temp_dir.rs  util.rs
crates/book/: Cargo.toml
crates/book/data/: script.schema.json
crates/book/src/: builder.rs  config.rs  file_format.rs  ids.rs  lib.rs  rich_text.rs  text.rs
crates/crosslock/: Cargo.toml
crates/crosslock-test/: Cargo.toml
crates/crosslock-test/tests/elock_test/manager/: main.rs
crates/crosslock-test/tests/elock_test/shared/: config.rs  mod.rs  msg.rs
crates/crosslock-test/tests/elock_test/worker/: cancel.rs  main.rs
crates/crosslock/docs/: os_lock_contention_detection.md
crates/crosslock/src/: ephemeral.rs  err_helpers.rs  lib.rs  shared_lock_set.rs  waiter.rs
crates/crosslock/src/shared_lock_set/: wait_queue.rs
crates/fan_dub_cli/: Cargo.toml
crates/fan_dub_cli/src/: file.rs  lib.rs  path.rs  resources.rs
crates/fan_dub_cli/src/tools/: client_secret.json  ffmpeg.rs  gdrive.rs  mod.rs
crates/fan_dub_cli/src/tools/ffmpeg/: formats.rs  input.rs  output.rs  probe.rs  tcp.rs
crates/header-gen/: Cargo.toml
crates/header-gen/src/: lib.rs
crates/resources/: Cargo.toml
crates/resources/src/: audio36.rs  file.rs  lib.rs  msg.rs
crates/resources/src/file/: data.rs  map.rs  patch.rs
crates/resources/src/types/: audio36.rs  class_species.rs  heap.rs  mod.rs  msg.rs  script.rs  selector_table.rs
crates/scidev/: Cargo.toml  clippy.toml
crates/scidev-cli/: Cargo.toml
crates/scidev-cli/src/: cli.rs  cmds.rs  main.rs
crates/scidev-cli/src/cli/: book.rs  compile_audio.rs  export_scannable.rs  generate_csv.rs  messages.rs  project.rs  resources.rs  scripts.rs  try_scan.rs
crates/scidev-cli/src/cmds/: book.rs  compile_audio.rs  export_scannable.rs  generate_csv.rs  messages.rs  project.rs  resources.rs  scripts.rs  try_scan.rs
crates/scidev/src/: ids.rs  lib.rs  project.rs  resources.rs  script_loader.rs  utils.rs
crates/scidev/src/ids/: raw.rs
crates/scidev/src/project/: schema.rs
crates/scidev/src/resources/: file.rs  resource.rs  types.rs
crates/scidev/src/resources/file/: data.rs  map.rs  patch.rs  volume.rs
crates/scidev/src/resources/types/: audio36.rs  msg.rs  palette.rs  view.rs
crates/scidev/src/script_loader/: errors.rs  mem_loader.rs  selectors.rs
crates/scidev/src/script_loader/mem_loader/: object.rs
crates/scidev/src/utils/: block.rs  block_context.rs  buffer.rs  compression.rs  continuation.rs  convert.rs  data_reader.rs  data_writer.rs  debug.rs  errors.rs  mem_reader.rs  range.rs  serde.rs  testing.rs  validation.rs
crates/scidev/src/utils/block/: async_read.rs  block2.rs  block_reader.rs  block_source.rs  builder.rs  core.rs  lazy_block.rs  mem_block.rs  output_block.rs  temp_store.rs
crates/scidub-cli/: Cargo.toml
crates/scidub-cli/src/: cli.rs  data.rs  dirs.rs  dist_env.rs  file.rs  lib.rs  main.rs  project.rs  resources.rs  rt.rs  walkdir.rs
crates/scidub-cli/src/book/: file_format.rs  rich_text.rs
crates/scidub-cli/src/cli/: build.rs  check_distribution.rs  game_data.rs  init.rs  script.rs
crates/scidub-cli/src/cmds/: book.rs  compile_audio.rs  export_scannable.rs  generate_csv.rs  try_scan.rs
crates/scidub-cli/src/commands/: config.rs
crates/scidub-cli/src/tools/: ffmpeg.rs
crates/sciproj/: Cargo.toml
crates/sciproj/src/: book.rs  collections.rs  file.rs  formats.rs  helpers.rs  imp.rs  lib.rs  main.rs  ndjson.rs  path.rs  project.rs  resources.rs  respack.rs  scripts.rs  state.rs  tables.rs  test_helpers.rs  tools.rs
crates/sciproj/src/book/: builder.rs  config.rs  file_format.rs  ids.rs  message_text.rs
crates/sciproj/src/collections/: indexed_map.rs
crates/sciproj/src/config/: schema.rs
crates/sciproj/src/formats/: aseprite.rs  ndjson.rs
crates/sciproj/src/helpers/: errors.rs  fmt.rs  futures.rs  guarded.rs  iter.rs  paths.rs  results.rs  test.rs
crates/sciproj/src/path/: abspath.rs  relpath.rs  segment.rs
crates/sciproj/src/project/: config.rs  core.rs  file_mapping.rs  paths.rs  state.rs  validate.rs
crates/sciproj/src/respack/: err_helpers.rs  schema.rs
crates/sciproj/src/tables/: serde_types.rs
crates/sciproj/src/tools/: espeak.rs  ffmpeg.rs  location.rs  scinc.rs  util.rs
crates/scitool-cli/: Cargo.toml
crates/scitool-cli/src/: book.rs  cli.rs  commands.rs  fs.rs  generate.rs  lib.rs  main.rs  output.rs  package.rs  respack.rs
crates/scitool-cli/src/book/: builder.rs  config.rs  text.rs
crates/scitool-cli/src/cli/: book.rs  generate.rs  msg.rs  script.rs
crates/scitool-cli/src/commands/: book.rs  dump_resource.rs  extract_resource_as_patch.rs  generate.rs  list_resources.rs  messages.rs  resources.rs  scripts.rs
crates/scitool-cli/src/fs/: atomic_dir.rs  err_helpers.rs  file_lock.rs  io_wrappers.rs  open_tracker.rs  ops.rs  owned_arc.rs  paths.rs
crates/scitool-cli/src/generate/: csv.rs  doc.rs  html.rs  json.rs  script.css  script.js  text.rs
crates/scitool-cli/src/output/: msg.rs
crates/scitool-cli/src/package/: dirty.rs  err_helpers.rs  io_wrappers.rs
crates/scitool-cli/src/respack/: io_wrappers.rs  schema.rs
crates/utils/: Cargo.toml
crates/utils/src/: block.rs  buffer.rs  buffer_ops.rs  compression.rs  data_reader.rs  data_writer.rs  debug.rs  lib.rs  numbers.rs  reloc_buffer.rs  symbol.rs  unique_id.rs  validation.rs
crates/utils/src/block/: block_reader.rs  block_source.rs  cache_store.rs  core.rs  error.rs  lazy_block.rs  mem_block.rs  output_block.rs  temp_store.rs
crates/utils/src/compression/: dcl.rs
crates/utils/src/errors/: context.rs  other.rs
crates/utils/src/numbers/: bit_convert.rs
crates/utils/src/reloc_buffer/: expr.rs  writer.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compress_roundtrip.rs  resource_file_reading.rs
xtask/: Cargo.toml
xtask/src/: main.rs  plat_default.rs  plat_macos.rs
(+293 files in other folders)
