[workspace]
members = [
    "crates/*",
    "fuzz",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3.1"
datalit = "0.1.0-alpha.4"
futures-core = "0.3"
futures-util = "0.3"
itertools = "0.14"
scidev = { path = "crates/scidev" }
scidev-errors = { path = "crates/errors" }
sciproj = { path = "crates/sciproj" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9"
walkdir = "2.5"

[workspace.lints.rust]
single-use-lifetimes = "warn"
unreachable-pub = "warn"

unsafe-code = "deny"
let-underscore-drop = "deny"
meta-variable-misuse = "deny"
redundant-imports = "deny"
unit-bindings = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Disable some pedantic lints, at least for now
missing-errors-doc = "allow"
missing-panics-doc = "allow"
unused-async = "allow"

# Useful restrictions that we want to enforce
dbg-macro = "warn"
iter-over-hash-type = "warn"
precedence-bits = "warn"
# use-debug = "warn"
todo = "warn"
mod-module-files = "warn"

disallowed-types = "deny"
mixed-read-write-in-expression = "deny"
infinite-loop = "deny"
needless-raw-strings = "deny"
partial-pub-fields = "deny"
string-add = "deny"
tests-outside-test-module = "deny"
unneeded-field-pattern = "deny"
