[package]
name = "scidev-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "compress_roundtrip"
path = "fuzz_targets/compress_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resource_file_reading"
path = "fuzz_targets/resource_file_reading.rs"
test = false
doc = false
bench = false

[dependencies]
anyhow = { workspace = true }
libfuzzer-sys = "0.4"
scidev = { workspace = true }
tempfile = "3.19.1"
