[package]
edition = "2024"
name = "scidev-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[[bin]]
bench = false
doc = false
name = "compress_roundtrip"
path = "fuzz_targets/compress_roundtrip.rs"
test = false

[[bin]]
bench = false
doc = false
name = "resource_file_reading"
path = "fuzz_targets/resource_file_reading.rs"
test = false

[dependencies]
anyhow = { workspace = true }
libfuzzer-sys = "0.4"
scidev = { workspace = true }
tempfile = "3.19.1"
