[package]
name = "atomic-dir"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
crosslock = { path = "../crosslock" }
cap-std = "3.4.4"
thiserror = "2.0.16"
serde_json = "1.0.145"
rand = "0.9.2"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
