[package]
name = "atomic-dir"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-std = "3.4.4"
crosslock = { path = "../crosslock" }
rand = "0.9.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
