[package]
name = "crosslock-test"
version = "0.1.0"
edition = "2024"
publish = false
autotests = false

[dependencies]
crosslock = { path = "../crosslock" }
futures = "0.3.31"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
serde_json = "1.0.145"
rand = "0.9.2"

[lints]
workspace = true


[[test]]
name = "elock_test"
path = "tests/elock_test/manager/main.rs"
harness = false

[[bin]]
name = "elock_test_worker"
path = "tests/elock_test/worker/main.rs"
