[package]
name = "crosslock-test"
version = "0.1.0"
edition = "2024"
publish = false
autotests = false

[[bin]]
name = "elock_test_worker"
path = "tests/elock_test/worker/main.rs"

[dependencies]
anyhow = "1.0.100"
crosslock = { path = "../crosslock" }
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true

[[test]]
name = "elock_test"
path = "tests/elock_test/manager/main.rs"
harness = false
