[package]
name = "crosslock"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]
cap-std = "3.4.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
cross-file-id = { git = "https://github.com/naerbnic/cross-file-id.git", branch = "main" }

[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
