[package]
name = "crosslock"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]
cap-std = "3.4.4"
cross-file-id = { git = "https://github.com/naerbnic/cross-file-id.git", branch = "main" }
io-lifetimes = "3.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
