[package]
name = "scitool-fan-dub-cli"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
async-net = "2.0.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
sluice = "0.5.5"
sci-resources = { path = "../resources" }
sci-utils = { path = "../utils" }
smol = "2.0.2"
clap = "4.5.32"
serde_json = "1.0.140"
