[package]
name = "scidev-header-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
itertools = "0.14.0"
scidev-resources = { path = "../resources" }
scidev-script-loader = { path = "../script-loader" }
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true