[package]
name = "scidev-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
sciproj = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
futures = "0.3.31"
itertools = "0.13"
log = "0.4.27"
rayon = "1.11.0"
schemars = "1.0.4"
scidev = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tokio = { workspace = true }
walkdir = "2.5.0"
toml = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "scidev"
path = "src/main.rs"
