[package]
name = "scidev-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
sciproj = { workspace = true }
clap = { workspace = true }
futures = "0.3.31"
itertools = { workspace = true }
log = "0.4.27"
schemars = "1.0.4"
scidev = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "scidev"
path = "src/main.rs"
