[package]
name = "scidev"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.91"
base64 = "0.22.1"
bytes = "1.10.1"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
num = "0.4.3"
pin-project = "1.1.10"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
tempfile = "3.19.1"
thiserror = "2.0.12"
scidev-macros-internal = { path = "../scidev-macros-internal" }

[dev-dependencies]
datalit = { workspace = true }
proptest = "1.7.0"

[lints]
workspace = true
