[package]
name = "scidev"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
num = "0.4.3"
pin-project = "1.1.10"
serde = { workspace = true }
sha2 = { workspace = true }
tempfile = "3.19.1"
thiserror = { workspace = true }
scidev-errors = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
datalit = { workspace = true }
proptest = "1.7.0"

[lints]
workspace = true
