[package]
name = "scidub-cli"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
csv = { workspace = true }
scidev = { workspace = true }
sciproj = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = "0.9"
toml = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
console = "0.16.3"
indicatif = { version = "0.18.4", features = ["tokio"] }

[lints]
workspace = true

[[bin]]
name = "scidub"
path = "src/main.rs"
