[package]
name = "scidub-cli"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "scidub"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
console = "0.16.3"
csv = { workspace = true }
indicatif = { version = "0.18.4", features = ["tokio"] }
scidev = { workspace = true }
sciproj = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = "0.9"
tokio = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
