[package]
name = "scidub-cli"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "scidub"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
console = "0.16.3"
csv = { workspace = true }
fs-mistrust = "0.14.2"
indicatif = { version = "0.18.4", features = ["tokio"] }
scidev = { workspace = true }
sciproj = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = "0.9"
tokio = { workspace = true }
toml = { workspace = true }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = "0.3.23"
walkdir = { workspace = true }

[features]
default = ["search_system_path_for_tools"]
# If enabled, searches the system path for tool names.
search_system_path_for_tools = []

[lints]
workspace = true
