[package]
name = "sciproj"
version = "0.0.0"
edition = "2024"

[dependencies]
atomic-dir = { path = "../atomic-dir" }
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.31"
itertools = "0.13"
log = "0.4.27"
rayon = "1.11.0"
schemars = "1.0.4"
scidev = { path = "../scidev" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.5.0"
tempfile = "3.19.1"
toml = "0.9.8"
bitflags = "2.10.0"
bytes = "1.10.1"
num = "0.4.3"
castaway = "0.2.4"
unicode-properties = "0.1.4"
unicode-ident = "1.0.22"
regex-syntax = "0.8.8"
regex-automata = "0.4.13"
unicode-normalization = "0.1.25"
slab = "0.4.11"
im = "15.1.0"
parking_lot = "0.12.5"
hashbrown = "0.16.1"

[lints]
workspace = true
