[package]
name = "sciproj"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
log = "0.4.27"
schemars = "1.0.4"
scidev = { workspace = true }
scidev-errors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
tempfile = "3.19.1"
toml = { workspace = true }
bitflags = "2.10.0"
bytes = "1.10.1"
num = "0.4.3"
castaway = "0.2.4"
unicode-properties = "0.1.4"
unicode-ident = "1.0.22"
regex-syntax = "0.8.8"
regex-automata = "0.4.13"
unicode-normalization = "0.1.25"
slab = "0.4.11"
im = "15.1.0"
parking_lot = "0.12.5"
hashbrown = "0.16.1"
pin-project = "1.1.12"
console = "0.16.3"
indicatif = { version = "0.18.4", features = ["tokio"] }

[lints]
workspace = true
