[package]
name = "sciproj"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bitflags = "2.10.0"
bytes = "1.10.1"
castaway = "0.2.4"
clap = { workspace = true }
console = "0.16.3"
futures-core = { workspace = true }
futures-util = { workspace = true }
hashbrown = "0.16.1"
im = "15.1.0"
indicatif = { version = "0.18.4", features = ["tokio"] }
itertools = { workspace = true }
log = "0.4.27"
num = "0.4.3"
parking_lot = "0.12.5"
pin-project = "1.1.12"
regex-automata = "0.4.13"
regex-syntax = "0.8.8"
schemars = "1.0.4"
scidev = { workspace = true }
scidev-errors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slab = "0.4.11"
tempfile = "3.19.1"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
unicode-ident = "1.0.22"
unicode-normalization = "0.1.25"
unicode-properties = "0.1.4"
walkdir = { workspace = true }

[lints]
workspace = true
