[package]
name = "scitool-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scidev = { path = "../scidev" }
clap = { version = "4.5.16", features = ["derive"] }
anyhow = "1.0.86"
bitter = "0.7.0"
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
sha2 = "0.10.9"
hex = "0.4.3"
base64 = "0.22.1"
bytes = "1.10.1"
serde_json = "1.0.145"
futures = "0.3.31"
pin-project = "1.1.10"
thiserror = "2.0.16"
polonius-the-crab = "0.4.2"

[lints]
workspace = true
