[package]
name = "scitool-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scidev = { path = "../scidev" }
clap = { version = "4.5.16", features = ["derive"] }
anyhow = "1.0.86"
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.9"
hex = "0.4.3"
base64 = "0.22.1"
bytes = "1.10.1"
serde_json = "1.0.145"
futures = "0.3.31"
thiserror = "2.0.16"
rand = "0.9.2"
cap-std = "3.4.4"
file-guard = "0.2.0"
same-file = "1.0.6"
tokio = { version = "1.28.2", features = ["full"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.22.0"

[[test]]
name = "elock_test"
path = "tests/elock_test/manager/main.rs"
harness = false

[[bin]]
name = "elock_test_worker"
path = "tests/elock_test/worker/main.rs"
dependencies = {}
