[package]
name = "scitool-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
atomic-dir = { path = "../atomic-dir" }
base64 = "0.22.1"
bytes = "1.10.1"
cap-std = "3.4.4"
clap = { version = "4.5.16", features = ["derive"] }
cross-file-id = { git = "https://github.com/naerbnic/cross-file-id.git", branch = "main" }
crosslock = { path = "../crosslock" }
hex = "0.4.3"
itertools = "0.13.0"
rand = "0.9.2"
scidev = { path = "../scidev" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.22.0"
thiserror = "2.0.16"

[dev-dependencies]
tempfile = "3.22.0"

[lints]
workspace = true
