[package]
name = "sci-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.91"
bitter = "0.7.0"
byteorder = "1.5.0"
bytes = "1.10.1"
futures = "0.3.31"
num = "0.4.3"
tempfile = "3.19.1"
thiserror = "1.0.65"

[dev-dependencies]
macro_rules_attribute = "0.2.0"
smol = "2.0.2"
smol-macros = "0.1.1"
